--- a/Back end/src/main/resources/messages.properties
+++ b/Back end/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ campo.descricao.obrigatorio= O campo descrição é obrigatório.
 campo.preco.obrigatorio= O campo preço é obrigatório.
 campo.data.obrigatorio= O campo data é obrigatório.
 campo.idCliente.obrigatorio= O campo cliente é obrigatório.
+
+campo.login.obrigatorio= O campo login é obrigatório.
+campo.password.obrigatorio= O campo senha é obrigatório.
